discussion/kv_engine/156699/156699_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38978: Gather "dcp" stats group in a background task

The "dcp" stats group includes aggregated values which may become
expensive to collect if there are lots of dcp streams.

To avoid this processing holding up a front end thread, move this
aggregation to a task.

Change-Id: Iea9b901b8d27164a0f0141967361553f0596f784

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-06-30 12:30:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-30 13:20:47.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/67/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:6: error: use of undeclared identifier "MultiBGFetcherTask" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:26: error: use of undeclared identifier "READER_TASK_IDX" [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:45: error: expected ";" after top level declarator [clang-diagnostic-error]
TASK(MultiBGFetcherTask, READER_TASK_IDX, 0)
                                            ^
                                            ;

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/67/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/tasks.def.h:25:1:
error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/67/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/75/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/78/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/75/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/122/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8937/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/76/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/75/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/76/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-07-01 15:00:03.000000000
Message: 
Patch Set 1:

Overriding CV, clang-tidy dislikes tasks.def.h
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-07-01 15:00:08.000000000
Message: 
Patch Set 1: Verified+1
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-07-01 15:00:10.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-07-01 15:32:29.000000000
Message: 
Patch Set 1:

(1 comment)

Do we have any tests covering this? I assume the old ep_testsuite_dcp should perform this call?
Line:3905, engines/ep/src/ep_engine.cc -> How do we handle any exceptions thrown from inside the lambda (if any?) Previously that would just propagate to the fe thread and close it; here the code is running in a background thread and would crash the system.

I think StatDCPTask's run() method should have a try...catch, and probably if anything is thrown then non-success should be returned to cookie.

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-07-01 15:32:33.000000000
Message: 
Patch Set 1: Code-Review-1
----------------------------------------------------------------------------------------------------------------------
Author: James H
Date: 2021-07-02 11:13:03.000000000
Message: 
Patch Set 1: -Verified

(1 comment)

Indeed - ep_testsuite_dcp covers this, various tests fail if stats are missing
Line:3905, engines/ep/src/ep_engine.cc -> Done

----------------------------------------------------------------------------------------------------------------------
